2009-10-14  Jonathan Pryor  <jpryor@novell.com>

	* TypeConverter_2_1.cs: Skip this type in the MonoTouch profile;
	  MonoTouch will be using the 2.0 version of TypeConverter.
	* ComponentCollection.cs, PropertyDescriptor.cs: MonoTouch uses the
	  .NET 2.0 versions of these types.

2009-09-29  Alan McGovern  <amcgovern@novell.com>

	* DefaultValueAttribute.cs: Implement the cctor which takes
	a Type and a string for the SL2 case.
	* CategoryAttribute.cs: Fix a typo in the CategoryAttribute.Asynchronous
	ctor and fix some SL2 specific naming changes for the default properties.

2009-09-24  Ivan N. Zlatev  <contact@i-nz.net>

	* EnumConverter.cs: Fix conversion of 0 flag values.
	[Fixes bug #541402]

2009-07-22  Jb Evain  <jbevain@novell.com>

	* ExpandableObjectConverter.cs: no method to override for a NET_2_1 profile.

2009-07-20  Tom Hindle <tom_hindle@sil.org>

	* Container.cs: Replaced for loop with for loop.
	[Fixes bug #522474]

2009-07-19  Gert Driesen  <drieseng@users.sourceforge.net>

	* Container.cs: Use generic list on 2.0 profile, and avoid using var
	on 1.0 profile. Use for loop instead of while in Dispose to avoid
	accessing count on each iteration.

2009-07-19  Gert Driesen  <drieseng@users.sourceforge.net>

	* Container.cs: Avoid NRE in Remove and RemoveWithoutUnsiting.

2009-07-18  Gert Driesen  <drieseng@users.sourceforge.net>

	* Container.cs: Changed Dispose(bool) behaviour to match .NET, based
	on patch by Tom Hindle (tom_hindle@sil.org). Also use ValidateName
	in Add overloads on 1.0 profile by making it available as private
	method. Use case-insensitive comparison of component name.

2009-06-29 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* LicenseProviderAttribute.cs: avoid nullref when provider has not
	been set or cannot be loaded.

2009-06-23  Marek Habersack  <mhabersack@novell.com>

	* TypeDescriptor.cs: do not wrap DefaultTypeDescriptionProvider.
	Implemented GetAttributes and GetProperties in
	DefaultTypeDescriptor.
